# basics-c

./: README.md
example-1/: CMakeLists.txt  README.md
example-1/src/: library.c
example-2/: CMakeLists.txt  README.md
example-2/src/: CMakeLists.txt  library.h  main.c
example-2/test/: CMakeLists.txt  main.c
